[package]
name = "ad-center-lib"
version = "0.1.0"
edition = "2021"

description = "作为ad-center的依赖库"
homepage = "https://github.com/tengfei-xy/ad-center-lib"
repository = "https://github.com/tengfei-xy/ad-center-lib"
license = "MIT OR Apache-2.0"
keywords = ["ad","tool","management","lib"]
readme = "README.MD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
